--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
       margin-right: 15px;
     }
     img {
-      max-width: 100%;
-      height: auto;
       margin: 10px 0;
     }
     .submit-button {
@@ -37,9 +35,10 @@
   <form action="https://formspree.io/f/xzzjbqzl" method="POST">
 
     <!-- Frågor 1–40 -->
-    <!-- Fråga 1 -->
+    <!-- Jag skriver ut alla frågor i turordning -->
+
     <fieldset>
-      <legend>1. Är du nöjd med företagets kommunikation?</legend>
+      <legend>1. Här kommer en fråga till.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga1" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga1" value="Nej"> Nej</label>
@@ -47,9 +46,8 @@
       </div>
     </fieldset>
 
-    <!-- Fråga 2 -->
     <fieldset>
-      <legend>2. Fungerar samarbetet i din arbetsgrupp?</legend>
+      <legend>2. Här kommer en fråga till.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga2" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga2" value="Nej"> Nej</label>
@@ -57,9 +55,8 @@
       </div>
     </fieldset>
 
-    <!-- Fråga 3 -->
     <fieldset>
-      <legend>3. Får du tillräckligt med återkoppling från chefer?</legend>
+      <legend>3. Här kommer en fråga till.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga3" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga3" value="Nej"> Nej</label>
@@ -67,10 +64,9 @@
       </div>
     </fieldset>
 
-    <!-- Fråga 4 med Oscar-bild -->
     <fieldset>
-      <legend>4. Tycker du att kommunikationen fungerar bra mellan avdelningarna?</legend>
-      <img src="Oscar.jpg" alt="Oscar"><br>
+      <legend>4. Här kommer en fråga till.</legend>
+      <img src="Oscar.jpg" alt="Oscar" width="200"><br>
       <div class="radio-group">
         <label><input type="radio" name="fraga4" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga4" value="Nej"> Nej</label>
@@ -78,10 +74,8 @@
       </div>
     </fieldset>
 
-    <!-- Fråga 5–39 (exempelmall, kopiera samma mönster) -->
-    <!-- Jag skriver bara ut några, du duplicerar blocket upp till fråga 39 -->
     <fieldset>
-      <legend>5. Har du möjlighet att påverka din arbetsdag?</legend>
+      <legend>5. Här kommer en fråga till.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga5" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga5" value="Nej"> Nej</label>
@@ -90,7 +84,7 @@
     </fieldset>
 
     <fieldset>
-      <legend>6. Känner du att dina idéer tas på allvar?</legend>
+      <legend>6. Här kommer en fråga till.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga6" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga6" value="Nej"> Nej</label>
@@ -98,11 +92,280 @@
       </div>
     </fieldset>
 
-    <!-- … fortsätt kopiera och ändra name/legend fram till fraga39 … -->
-
-    <!-- Fråga 40 -->
     <fieldset>
-      <legend>40. Skulle du rekommendera arbetsplatsen till andra?</legend>
+      <legend>7. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga7" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga7" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga7" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset>
+      <legend>8. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga8" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga8" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga8" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset>
+      <legend>9. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga9" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga9" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga9" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset>
+      <legend>10. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga10" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga10" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga10" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <!-- Frågor 11 till 39 -->
+    <!-- Samma struktur, numrerat -->
+    <!-- Jag skriver ut dem i följd -->
+
+    <!-- Fråga 11 -->
+    <fieldset><legend>11. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga11" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga11" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga11" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>12. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga12" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga12" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga12" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>13. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga13" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga13" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga13" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>14. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga14" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga14" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga14" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>15. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga15" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga15" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga15" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>16. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga16" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga16" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga16" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>17. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga17" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga17" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga17" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>18. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga18" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga18" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga18" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>19. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga19" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga19" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga19" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>20. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga20" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga20" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga20" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>21. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga21" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga21" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga21" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>22. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga22" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga22" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga22" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>23. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga23" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga23" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga23" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>24. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga24" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga24" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga24" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>25. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga25" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga25" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga25" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>26. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga26" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga26" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga26" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>27. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga27" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga27" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga27" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>28. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga28" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga28" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga28" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>29. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga29" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga29" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga29" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>30. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga30" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga30" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga30" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>31. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga31" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga31" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga31" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>32. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga32" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga32" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga32" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>33. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga33" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga33" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga33" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>34. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga34" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga34" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga34" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>35. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga35" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga35" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga35" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>36. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga36" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga36" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga36" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>37. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga37" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga37" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga37" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>38. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga38" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga38" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga38" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>39. Här kommer en fråga till.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga39" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga39" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga39" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>40. Här kommer en fråga till.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga40" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga40" value="Nej"> Nej</label>
@@ -113,6 +376,10 @@
     <!-- Bakgrundsfrågor -->
     <fieldset>
       <legend>Bakgrundsfrågor</legend>
+      <label>Namn:<br>
+        <input type="text" name="namn">
+      </label><br><br>
+
       <label>Vilken stad bor du i?<br>
         <input type="text" name="stad">
       </label><br><br>
