--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Jag skriver ut alla frågor i turordning -->
 
     <fieldset>
-      <legend>1. Här kommer en fråga till.</legend>
+      <legend>1. Fri användning av rep, kedjor, buntband, hand- hals- och fot-fängslen.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga1" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga1" value="Nej"> Nej</label>
@@ -47,7 +47,7 @@
     </fieldset>
 
     <fieldset>
-      <legend>2. Här kommer en fråga till.</legend>
+      <legend>2. Fri användning av silvertejp, ”plastic wrapping” etc.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga2" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga2" value="Nej"> Nej</label>
@@ -56,7 +56,7 @@
     </fieldset>
 
     <fieldset>
-      <legend>3. Här kommer en fråga till.</legend>
+      <legend>3. Extrem utvidgning av vagina med händer och verktyg såsom dildos, flaskor, magnumflaskor, ”bats”, pålar, spekulum, Coca-cola burkar etc.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga3" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga3" value="Nej"> Nej</label>
@@ -65,7 +65,7 @@
     </fieldset>
 
     <fieldset>
-      <legend>4. Här kommer en fråga till.</legend>
+      <legend>4. Pålning vaginalt med Oscar, se bild</legend>
       <img src="Oscar.jpg" alt="Oscar" width="200"><br>
       <div class="radio-group">
         <label><input type="radio" name="fraga4" value="Ja"> Ja</label>
@@ -75,7 +75,7 @@
     </fieldset>
 
     <fieldset>
-      <legend>5. Här kommer en fråga till.</legend>
+      <legend>5. Pålning analt med Oscar</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga5" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga5" value="Nej"> Nej</label>
@@ -84,7 +84,7 @@
     </fieldset>
 
     <fieldset>
-      <legend>6. Här kommer en fråga till.</legend>
+      <legend>6. Singel fisting vaginalt.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga6" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga6" value="Nej"> Nej</label>
@@ -93,7 +93,7 @@
     </fieldset>
 
     <fieldset>
-      <legend>7. Här kommer en fråga till.</legend>
+      <legend>7. Singel fisting analt.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga7" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga7" value="Nej"> Nej</label>
@@ -102,7 +102,7 @@
     </fieldset>
 
     <fieldset>
-      <legend>8. Här kommer en fråga till.</legend>
+      <legend>8. Dubbel fisting vaginalt.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga8" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga8" value="Nej"> Nej</label>
@@ -111,7 +111,7 @@
     </fieldset>
 
     <fieldset>
-      <legend>9. Här kommer en fråga till.</legend>
+      <legend>9. Dubbel fisitng analt.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga9" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga9" value="Nej"> Nej</label>
@@ -120,7 +120,7 @@
     </fieldset>
 
     <fieldset>
-      <legend>10. Här kommer en fråga till.</legend>
+      <legend>10. Asphyxiation, gagging, tills kräkning/svimning.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga10" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga10" value="Nej"> Nej</label>
@@ -133,7 +133,7 @@
     <!-- Jag skriver ut dem i följd -->
 
     <!-- Fråga 11 -->
-    <fieldset><legend>11. Här kommer en fråga till.</legend>
+    <fieldset><legend>11. Waterboarding till kräkning /swimning inträffar.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga11" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga11" value="Nej"> Nej</label>
@@ -141,7 +141,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>12. Här kommer en fråga till.</legend>
+    <fieldset><legend>12. Vaginal och anal tortyr.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga12" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga12" value="Nej"> Nej</label>
@@ -149,7 +149,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>13. Här kommer en fråga till.</legend>
+    <fieldset><legend>13. Lavemang.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga13" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga13" value="Nej"> Nej</label>
@@ -157,7 +157,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>14. Här kommer en fråga till.</legend>
+    <fieldset><legend>14. Knullas vaginalt med toaborste.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga14" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga14" value="Nej"> Nej</label>
@@ -165,7 +165,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>15. Här kommer en fråga till.</legend>
+    <fieldset><legend>15. Knullas analt med toaborste.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga15" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga15" value="Nej"> Nej</label>
@@ -173,7 +173,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>16. Här kommer en fråga till.</legend>
+    <fieldset><legend>16. Smält vawx/stearing över kroppen.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga16" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga16" value="Nej"> Nej</label>
@@ -181,7 +181,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>17. Här kommer en fråga till.</legend>
+    <fieldset><legend>17. Electro.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga17" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga17" value="Nej"> Nej</label>
@@ -189,7 +189,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>18. Här kommer en fråga till.</legend>
+    <fieldset><legend>18. Fistas med nässlor.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga18" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga18" value="Nej"> Nej</label>
@@ -197,7 +197,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>19. Här kommer en fråga till.</legend>
+    <fieldset><legend>19. Heta såser, chiliflakes i alla hål.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga19" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga19" value="Nej"> Nej</label>
@@ -205,7 +205,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>20. Här kommer en fråga till.</legend>
+    <fieldset><legend>20. Floggning och piskning med valfri utrustning såsom kattsvans, linjal, ris.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga20" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga20" value="Nej"> Nej</label>
@@ -213,7 +213,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>21. Här kommer en fråga till.</legend>
+    <fieldset><legend>21. Med paddel piska in silvertejp med häftstift över bröst, bak, fitta.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga21" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga21" value="Nej"> Nej</label>
@@ -221,7 +221,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>22. Här kommer en fråga till.</legend>
+    <fieldset><legend>22. Örfilas, slås med öppen hand över hela kroppen.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga22" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga22" value="Nej"> Nej</label>
@@ -229,7 +229,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>23. Här kommer en fråga till.</legend>
+    <fieldset><legend>23. Upphängd i en jutesäck för förvaring, floggning etc.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga23" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga23" value="Nej"> Nej</label>
@@ -237,7 +237,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>24. Här kommer en fråga till.</legend>
+    <fieldset><legend>24. Sensory deprevation.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga24" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga24" value="Nej"> Nej</label>
@@ -245,7 +245,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>25. Här kommer en fråga till.</legend>
+    <fieldset><legend>25. Medieval racks & Wooden horse</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga25" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga25" value="Nej"> Nej</label>
@@ -253,7 +253,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>26. Här kommer en fråga till.</legend>
+    <fieldset><legend>26. Vacuum bed.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga26" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga26" value="Nej"> Nej</label>
@@ -261,7 +261,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>27. Här kommer en fråga till.</legend>
+    <fieldset><legend>27. Vagina vacuum pumping.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga27" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga27" value="Nej"> Nej</label>
@@ -269,7 +269,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>28. Här kommer en fråga till.</legend>
+    <fieldset><legend>28. Breast vacuump punping.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga28" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga28" value="Nej"> Nej</label>
@@ -277,7 +277,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>29. Här kommer en fråga till.</legend>
+    <fieldset><legend>29. Cunt whipping.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga29" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga29" value="Nej"> Nej</label>
@@ -285,7 +285,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>30. Här kommer en fråga till.</legend>
+    <fieldset><legend>30. Cunt kicking.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga30" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga30" value="Nej"> Nej</label>
@@ -293,7 +293,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>31. Här kommer en fråga till.</legend>
+    <fieldset><legend>31. Dras naken och bunden genom lerdiken, åkrar och skog etc.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga31" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga31" value="Nej"> Nej</label>
@@ -301,7 +301,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>32. Här kommer en fråga till.</legend>
+    <fieldset><legend>32. Tas med till GB med 10-30 skogshuggare från Rumänien.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga32" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga32" value="Nej"> Nej</label>
@@ -309,7 +309,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>33. Här kommer en fråga till.</legend>
+    <fieldset><legend>33. Bindas naken på en myrstack med vidöppna hål.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga33" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga33" value="Nej"> Nej</label>
@@ -317,7 +317,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>34. Här kommer en fråga till.</legend>
+    <fieldset><legend>34. Förvara Horan helt godtyckligt. Temperaturen skall vara minst 16 C, tillgång till vatten, tillräckligt med mat, en filt, en madrass, ett stearinljus samt en toaletthink.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga34" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga34" value="Nej"> Nej</label>
@@ -325,7 +325,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>35. Här kommer en fråga till.</legend>
+    <fieldset><legend>35. Använda erforderligt våld för att få Horan att utföra det som Horan har gett Kontraktsägaren tillåtelse att utföra.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga35" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga35" value="Nej"> Nej</label>
@@ -333,7 +333,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>36. Här kommer en fråga till.</legend>
+    <fieldset><legend>36. Horan kan outas helt fritt om Horan bryter mot någon punkt i avtalet.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga36" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga36" value="Nej"> Nej</label>
@@ -341,7 +341,8 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>37. Här kommer en fråga till.</legend>
+    <fieldset><legend>37. Extremt våld får användas fritt. Sjukhusvård kan behövas men är inte 
+avsikten.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga37" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga37" value="Nej"> Nej</label>
@@ -349,7 +350,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>38. Här kommer en fråga till.</legend>
+    <fieldset><legend>38. Horan får godtyckligt piercas i: tunga, näsa, bröstvårtor, fittläppar, klitoris.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga38" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga38" value="Nej"> Nej</label>
@@ -357,7 +358,7 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>39. Här kommer en fråga till.</legend>
+    <fieldset><legend>39. Dricka sitt eget urin.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga39" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga39" value="Nej"> Nej</label>
@@ -365,11 +366,83 @@
       </div>
     </fieldset>
 
-    <fieldset><legend>40. Här kommer en fråga till.</legend>
+    <fieldset><legend>40. Dricka andras urin.</legend>
       <div class="radio-group">
         <label><input type="radio" name="fraga40" value="Ja"> Ja</label>
         <label><input type="radio" name="fraga40" value="Nej"> Nej</label>
         <label><input type="radio" name="fraga40" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>41. Äta scat.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga39" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga39" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga39" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>42. Horan får hundknullas.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga39" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga39" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga39" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+    <fieldset><legend>43. Horan får hästknullas.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga39" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga39" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga39" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+        <fieldset><legend>44. Godtyckligt antal medhjälpare får närvara.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga39" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga39" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga39" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+        <fieldset><legend>45. Medhjälpare oavsett kön.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga39" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga39" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga39" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+        <fieldset><legend>46. Horan får efter 10 timmars total sessionstid tatueras på fittan.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga39" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga39" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga39" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+        <fieldset><legend>47. Horan skall efter en K9-session tatueras med minst en tass på fittan, svank, bakdel, axel, bröst, arm etc, så att det täcks när vanlig klädsel bärs. Om endast en tatuering så skall den vara minst 5 cm bred.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga39" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga39" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga39" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+        <fieldset><legend>48. Horan ska hänga en skylt runt halsen där Horans fulla namn framgår, personnummer, bostadsadress, mobiltelefonnummer, var Horan arbetar och telefonnummer till arbetsplatsen.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga39" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga39" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga39" value="Ev. senare"> Ev. senare</label>
+      </div>
+    </fieldset>
+
+        <fieldset><legend>49. Horan spelar in och pratar fritt om sina livserfarenheter att vara en hora, hur många Horan antagligen har knullat, Horans fantasier etc. Allt för att chocka tittaren av videon. Tid minst 15 minuter.</legend>
+      <div class="radio-group">
+        <label><input type="radio" name="fraga39" value="Ja"> Ja</label>
+        <label><input type="radio" name="fraga39" value="Nej"> Nej</label>
+        <label><input type="radio" name="fraga39" value="Ev. senare"> Ev. senare</label>
       </div>
     </fieldset>
 
@@ -406,4 +479,5 @@
     <button type="submit" class="submit-button">Skicka</button>
   </form>
 </body>
+
 </html>
